--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Football Jersey Store</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -85,6 +85,22 @@
   </div>
  
 </div>
+<section class="about" id="about">
+        <h1 class="heading"><span>about </span> us</h1>
+        <div class="row">
+            <div class="image">
+                <img src="https://media.tenor.com/CZhZPZ7BKdoAAAAC/jersey-uniform.gif">
+                
+            </div>
+            <div class="content">
+                <h3>why choose us?</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At dolore exercitationem impedit rerum eveniet, quisquam, explicabo enim porro atque 
+                    incidunt ducimus, officiis aperiam expedita vero eos! Dicta ad ullam repudiandae!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex quibusdam excepturi hic quos id perferendis
+                         consectetur culpa repudiandae ipsam adipisci, voluptatum libero nemo delectus doloremque ipsa maxime, sit quidem distinctio!</p>
+                         
+            </div>
+        </div>
 <div class="foot-panel">
         <div class="pages">
           <a>condition for us</a>
